# codelab-django

./: .Dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  MANIFEST.in  Makefile  Makefile-blog  Makefile-edu  Makefile-shop  README.md  bandit.yaml  docker-compose.yaml  mypy.ini  pyproject.toml  pytest.ini  setup.cfg
.docs/: README-dev-01.md  README-dev-02.md  README-dev-03.md  README-dev-04.md  README.md
common/auth/: admin.py  apps.py  authentication.py  forms.py  models.py  serializers.py  urls.py  views.py
common/auth/api/: urls.py
common/auth/migrations/: 0001_initial.py  0002_alter_customuser_email.py  0003_alter_customuser_email.py  0003_alter_customuser_email_alter_customuser_groups_and_more.py  0004_alter_customuser_email.py  0004_alter_customuser_phone_number.py  0005_alter_customuser_email.py  0006_alter_customuser_email.py
common/auth/templates/account/: dashboard.html  edit.html  login.html  password_reset_from_key.html
common/auth/templates/registration/: login.html  password_reset_complete.html  signup.html  (+4 more)
common/models/: managers.py  mixins.py  model_managers.py  model_mixins.py  model_querysets.py  querysets.py
common/settings/: applied.py  base.py  development.py  production.py  test.py
common/templates/account/: login.html  password_reset.html  password_reset_done.html  signup.html
common/templates/common/: base_auth.html  base_header.html  base_root.html
scripts/: add_init.py  add_service_app.py  entrypoint.sh  load_data.py
services/: manage.py
services/api_examples/: enroll_all.py
services/auth/: apps.py  forms.py  urls.py
services/auth/api/: urls.py  views.py
services/auth/migrations/: 0001_initial.py
services/base/: manage.py
services/base/base/: settings.py  urls.py
services/base/templates/: base.html  home.html  index.html
services/blog/: manage.py
services/blog/blog/: asgi.py  settings.py  urls.py  wsgi.py
services/blog/site/: asgi.py  settings.py  urls.py  wsgi.py
services/blog/templates/: base.html  home.html  index---.html  search_result.html
services/blog/tests/: conftest.py  settings.py  settings_test.py  test_forms.py  test_search.py  test_views.py  tests.py
services/cart/: apps.py  cart.py  views.py
services/catalog/: admin.py  apps.py  models.py  views.py
services/catalog/migrations/: 0002_alter_product_options_and_more.py
services/chat/: apps.py  views.py
services/courses/: apps.py  fields.py  forms.py  models.py  views.py
services/courses/api/: serializers.py  urls.py  views.py
services/courses/fixtures/: subjects.json
services/courses/migrations/: 0003_alter_content_options_content_order_and_more.py  0004_course_students.py
services/edu/: manage.py
services/edu/edu/: asgi.py  settings.py  urls.py  wsgi.py
services/edu/templates/: base.html
services/models/: managers.py  querysets.py
services/orders/: admin.py  apps.py  forms.py  models.py  tasks.py  views.py
services/orders/migrations/: 0001_initial.py
services/payment/: admin.py  tasks.py  views.py  webhooks.py
services/post/: apps.py  data.py  forms.py  models.py  urls.py  views.py
services/post/migrations/: 0003_post_verse.py  0004_book_post_chapter_verse_post_book_id.py
services/shop/: manage.py
services/shop/shop/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/shop/templates/: base.html
services/site/: asgi.py  celery_config.py  urls.py  wsgi.py
services/site/settings/: __init__.py  base.py  debug.py
services/static/css/: edu.css
services/students/: apps.py  forms.py  views.py
services/templates/: home.html
services/templates/account/: edit.html  email_confirm.html  login.html  password_reset_from_key_done.html
services/templates/cart/: detail.html
services/templates/catalog/: list.html
services/templates/common/: base_auth.html  base_header.html
services/templates/includes/: header.html  hero.html  mycart.html  sidebar.html
services/templates/payment/: process.html  request.html  test.html
services/templates/post/: create.html
static/css/: shop.css
theme/static/css/: styles.css
theme/static_src/: .gitignore  .pnp.cjs  .yarnrc.yml  package.json  tailwind.config.js
theme/static_src/src/: styles.css
(+91 files in other folders)
