[tool.poetry]
name = "django-starter"
version = "0.1.0"
description = ""
authors = ["codelab-kr <master@code-lab.kr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0.6"
djangorestframework = "^3.15.2"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"
flake8 = "^7.1.0"
pytest = "^8.2.2"
pytest-django = "^4.8.0"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool.mypy]
disallow_untyped_defs = false

[tool.djlint]
profile = "django"
ignore = "D018,H006,H013,H025,H029,H030,H031,T002,T003"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
