[metadata]
name = django-starter
version = 0.1.0
python_requires = '>=3.12'
description = A Django project with microservice architecture
author = codelab
author_email = master@code-lab.kr

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=5.0.6
    djangorestframework
    django-tailwind
    tailwind
    pre-commit
    flake8
    pytest
    pytest-django
    django_browser_reload

[options.packages.find]
# where = common, services
where = .

[options.entry_points]
console_scripts =
    manage = services.blog.manage:main

[tool:pytest]
DJANGO_SETTINGS_MODULE = common.settings.development
python_files = tests.py test_*.py *_tests.py

[tool:mypy]
plugins =
    mypy_django_plugin.main
disallow_untyped_defs = false

[tool:mypy.plugins.django-stubs]
django_settings_module = common.settings.development

[tool:mypy-django.*]
ignore_missing_imports = True

[tool:isort]
multi_line_output = 5
line_length = 119

[tool:yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool:djlint]
profile = "django"
ignore = "D018,H006,H013,H025,H029,H030,H031,T002,T003"
