[metadata]
name = django-starter
version = 0.1.0
python_requires = '>=3.12'
description = A Django project with microservice architecture
author = codelab
author_email = master@code-lab.kr
url = https://codes.code-lab.kr
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=5.0.6
    djangorestframework
    django-tailwind
    requests
    tailwind
    split-settings
    django-allauth[socialaccount]
    crispy-tailwind
    pyjwt
    cryptography
    celery
    flower
    stripe

[options.extras_require]
dev =
    pre-commit
    flake8
    django_browser_reload
    bandit
    pytest
    pytest-cov
    pytest-django

[bdist_wheel]
universal = 1

[options.packages.find]
# where = common, services
where = .
exclude =
    tests

[options.entry_points]
console_scripts =
    blog = services.blog.manage:main

[tool:pytest]
DJANGO_SETTINGS_MODULE = services.blog.tests.settings
python_files = tests.py test_*.py *_tests.py

[tool:mypy]
plugins =
    mypy_django_plugin.main
disallow_untyped_defs = false

[tool:mypy.plugins.django-stubs]
django_settings_module = services.blog.tests.settings

[tool:mypy-django.*]
ignore_missing_imports = True

[tool:isort]
multi_line_output = 5
line_length = 119

[tool:yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[tool:djlint]
profile = "django"
ignore = "D018,H006,H013,H025,H029,H030,H031,T002,T003"

[yapf]
based_on_style = pep8
column_limit = 119
continuation_align_style = SPACE
dedent_closing_brackets = true

[pycodestyle]
max-line-length = 119
ignore = E203, E266, E501, W503

[coverage:run]
omit =
  **/migrations/*
  **/tests/*
  **/manage.py
  **/api_urls.py
  **/urls.py
  **/templatetags/__init__.py
